--- a/gold-admin-frontend/src/app/views/partials/components/image-functionality-dialog/image-functionality-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-functionality-dialog/image-functionality-dialog.component.html
@@ -1,3 +1,2 @@
-<angular-image-viewer [src]="data.data" [(config)]="config" [(index)]="data.index" [screenHeightOccupied]='0'
-    (customImageEvent)="handleEvent($event)">
+<angular-image-viewer [src]="data.data" [(config)]="config" [(index)]="data.index" [screenHeightOccupied]='0'>
 </angular-image-viewer>
