changes for file upload

--- a/gold-admin-frontend/src/app/views/pages/admin/upload-data/upload-banner/upload-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/upload-data/upload-banner/upload-banner.component.html
@@ -8,7 +8,7 @@
                 <label  class="font-weight-500 text-gray d-flex align-items-center"> 600px X 300px with .jpg or .png</label>
             </div>
         </div>
-        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
+        <kt-uplod-data-image [images]="images" [reason]="'offer'"></kt-uplod-data-image>
     </kt-portlet-body>
     <kt-portlet-footer *ngxPermissionsOnly="['promotionalBannerAdd']">
         <div class="row p-3">
