--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -176,17 +176,17 @@
                             <div class="col-4 align-self-center form-label">
                                 <label class="mandatory  text-color font-weight-500">FORM 60 </label>
                             </div>
-                            <div class="offset-5 col" *ngIf="!controls.panImage.value">
+                            <div class="offset-5 col" *ngIf="!controls.panImg.value">
                                 <input type="file" #file (input)="getFileInfo($event)" class="d-none">
                                 <kt-button [myClass]="'w-100'" [type]="'button'" [value]="'Attach'"
                                     (click)="file.click()">
                                 </kt-button>
                             </div>
-                            <div class="col-5 form-label" *ngIf="controls.panImage.value">
+                            <div class="col-5 form-label" *ngIf="controls.panImg.value">
                                 <label for="" class="text-primary kt-padding-l-15 kt-pointer" (click)="preview()">View
                                     Image</label>
                             </div>
-                            <div class="col form-label" *ngIf="controls.panImage.value">
+                            <div class="col form-label" *ngIf="controls.panImg.value">
                                 <label *ngIf="data.action != 'view'" class="text-danger kt-padding-l-15 kt-pointer"
                                     (click)="remove()">Remove</label>
                             </div>
@@ -233,17 +233,17 @@
 
                         </div>
                         <div class="row kt-padding-t-15" *ngIf="controls.panType.value == 'pan'">
-                            <div class="offset-9 col" *ngIf="!controls.panImage.value">
+                            <div class="offset-9 col" *ngIf="!controls.panImg.value">
                                 <input type="file" #file (input)="getFileInfo($event)" class="d-none">
                                 <kt-button [myClass]="'w-100'" [type]="'button'" [value]="'Attach'"
                                     (click)="file.click()">
                                 </kt-button>
                             </div>
-                            <div class="offset-4 col-5 form-label" *ngIf="controls.panImage.value">
+                            <div class="offset-4 col-5 form-label" *ngIf="controls.panImg.value">
                                 <label for="" class="text-primary kt-padding-l-15 kt-pointer" (click)="preview()">View
                                     Image</label>
                             </div>
-                            <div class="col form-label" *ngIf="controls.panImage.value">
+                            <div class="col form-label" *ngIf="controls.panImg.value">
                                 <label *ngIf="data.action != 'view'" class="text-danger kt-padding-l-15 kt-pointer"
                                     (click)="remove()">Remove</label>
                             </div>
