--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -41,8 +41,11 @@
                         <div class="col-4 form-label">
                             <label class="text-color kt-padding-l-10">KYC Status</label>
                         </div>
-                        <div class="col-6">
+                        <div class="col-3">
                             <input type="text" class="form-control text-capitalize" formControlName="kycStatus" readonly>
+                        </div>
+                        <div class="col-3">
+                            <label class="text-color kt-padding-l-10" (click)="viewKYC(26)">View</label>
                         </div>
                     </div>
                 </div>
