--- a/gold-admin-frontend/src/app/views/pages/admin/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -10,7 +10,7 @@
                     .png</label>
             </div>
         </div>
-        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
+        <kt-uplod-data-image [images]="images" [reason]="'offer'"></kt-uplod-data-image>
     </kt-portlet-body>
     <kt-portlet-footer *ngxPermissionsOnly="['partnerBannerAdd']">
         <div class="row p-3">
