bhushan::internal user

--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -228,7 +228,7 @@
                         </div>
                         <div class="row kt-padding-t-15" *ngIf="data.action  != 'add' && controls.passbookImg.value">
                             <div class="col-12">
-                                <img [src]="controls.passbookImg.value" alt="" class="img-fluid">
+                                <img [src]="controls.passbookImg.value" alt="picture" class="img-fluid">
                             </div>
                         </div>
                     </div>
